# zEngine

./: CMakeLists.txt  README.md  build_all.sh  changes.tmp  zEngine.cbp  zEngine.depend  zEngine.layout  zEngineSDK.workspace  zEngineSDK.workspace.layout
demo/: CMakeLists.txt  Makefile  cmake_install.cmake  zDemo.cbp  zDemo.depend  zDemo.layout  zTest
demo/doxygen/: doxyfile
demo/src/: main.cpp
inc/config/: defs.h  export.h  forward.h  platform.h  version.h
inc/core/: camera_manager.h  dev.h  enable_create.h  enable_name.h  exception.h  ogre_params.h  root.h  smart_ptr.hpp  version.h
inc/init/: ogre_initialiser.h
inc/managers/: ambiance_manager.h  state_manager.h
inc/ui/: ogre_console.h
resources/: ogre_d.cfg  plugins_d.cfg  resources_d.cfg
src/: sample_app.cpp
src/config/: platform.cpp
src/core/: camera_manager.cpp  dev.cpp  enable_create.cpp  enable_name.cpp  exception.cpp  ogre_params.cpp  root.cpp
src/init/: ogre_initialiser.cpp
src/managers/: ambiance_manager.cpp  state_manager.cpp
src/ui/: ogre_console.cpp
